# amll-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  ttml-api-project-instruction-final-v2.md
.github/workflows/: go.yml  rust.yml
backend/: .gitignore  Dockerfile  Makefile  go.mod  go.sum
backend/cmd/server/: server.go
backend/internal/config/: config.go
backend/internal/handler/: auth.go  batch.go  cloud_music.go  common.go  index.go  lyrics.go  not_found.go  online_search.go  search.go  stats.go  sync.go
backend/internal/infrastructure/: casdoor.go  meilisearch.go  minio.go  postgres.go  rabbitmq.go  redis.go
backend/internal/middleware/: auth.go  logger.go  range.go  recovery.go  request_id.go
backend/internal/model/: meilisearch.go  not_found.go  song.go  sync.go  sync_progress.go
backend/internal/pkg/: jwt.go  (+2 more)
backend/migrations/: 001_create_tables.down.sql  001_create_tables.up.sql  002_add_sync_progress.down.sql  002_add_sync_progress.up.sql  003_add_commit_timestamp.down.sql  003_add_commit_timestamp.up.sql  004_drop_platform_id_unique.down.sql  004_drop_platform_id_unique.up.sql  005_add_not_found_requests.down.sql  005_add_not_found_requests.up.sql
worker/: Cargo.toml  Dockerfile
worker/src/: app.rs  config.rs  main.rs
worker/src/db/: mod.rs  repository.rs  types.rs
worker/src/db/models/: artist.rs  mod.rs  platform_mapping.rs  song.rs  song_artist.rs  sync_history.rs  sync_progress.rs  sync_state.rs
worker/src/infra/: meilisearch_client.rs  mod.rs  postgres.rs  rabbitmq.rs
worker/src/not_found/: consumer.rs  mod.rs  ncm_api.rs  repository.rs
worker/src/search/: meilisearch.rs
worker/src/storage/: minio.rs  redis.rs
worker/src/sync/: diff.rs  downloader.rs  github.rs  index_parser.rs  mod.rs  ttml_parser.rs
worker/src/worker/: consumer.rs  mod.rs  sync_task.rs
(+16 files in other folders)
