[package]
name = "ttml-worker"
version = "0.1.0"
edition = "2021"
description = "TTML lyrics sync worker consuming RabbitMQ and syncing from amll-ttml-db"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"

# AMQP (RabbitMQ)
lapin = "2.3"
futures-lite = "2.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Health check HTTP server
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
tower = "0.5"

# Async traits
async-trait = "0.1"

# Database (SeaORM)
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json", "macros"], default-features = false }

# S3 / MinIO
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.40"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }

# MeiliSearch
meilisearch-sdk = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# Pinyin
pinyin = "0.10"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Errors
thiserror = "1"
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
url = "2"
bytes = "1"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
